// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LcMarketAffiliateItem/> component should render LcMarketAffiliateItem, type "Image" 1`] = `

<div class="mix">
  <img src="//yastatic.net/s3/lpc/assets/image-preview.svg"
       class="lc-market-affiliate-item__image"
  >
</div>

`;

exports[`<LcMarketAffiliateItem/> component should render LcMarketAffiliateItem, type "Text" 1`] = `

<div class="mix">
  <div class="lc-text-block lc-text-block_size_s16"
       style="--font-weight:400;--color:initial;--font-family:text;--letter-spacing:normal"
  >
    <div class="lc-styled-text">
      <div class="lc-styled-text__text lc-styled-text__text_align_left">
        <a href="https://yandex.ru/support/market-distr/widgets/widgets.html">
          Виджеты Маркета на сайте партнера
        </a>
      </div>
    </div>
  </div>
</div>

`;

exports[`<LcMarketAffiliateItem/> component should render LcMarketAffiliateItem, type "Widget" 1`] = `

<div class="mix">
  <div class="lc-market-affiliate-item__widget">
  </div>
</div>

`;
